BUG: Service layout bug resolved

--- a/src/theme/_landingpage.scss
+++ b/src/theme/_landingpage.scss
@@ -330,7 +330,7 @@
 }
 
 // service section
-.service {
+.services {
     min-height: 100vh;
     height: auto;
     width: 100%;
